--- a/h.html
+++ b/h.html
@@ -6,7 +6,12 @@
   <title>Get started</title>
 </head>
 <body>
-  
+  background: transparent;
+    box-shadow: none;
+    border-radius: 1em 0em 0em 1em;
+    padding: 3.125em;
+    align-items: center;
+    font-family: Montserrat;
   
 </body>
 </html>
