--- a/index.html
+++ b/index.html
@@ -6,27 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Get Started</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="about-container">
+
     <div class="left-section">
-        <h1>Rovu</h1>
-        <p>Welcome to Rovu!</p>
-        <h2>Get Started On</h2>
-        <h2>Your HairCare Journey</h2>
+      <div class="text-box">
+        <h1>Oriana <span class="txt">HAIR EXPERTS</span> </h1>
+        <p class="ori">Welcome to Oriana!</p>
+        <p class="start-text">Get Started On Your</p>
+        <p class="start-sub"> Haircare Journey</p>
         <div class="btn-container">
-          <button class="start-btn">GET STARTED</button>
+          <a class="start-btn" href="home.html">GET STARTED</a>
         </div>
         <div class="btn-container">
-          <button class="no-btn">NO, THANKS</button>
+         <a href="#" class="no-btn">NO, THANKS</a>
         </div>
-    </div>
-    <div class="right-section">
-      <div class="img-cont">
-        <img src="images/hair.jpg" alt="" class="image">
       </div>
     </div>
+
+    <div class="right-section"></div>
   </div>
 </body>
 
