--- a/home.html
+++ b/home.html
@@ -4,8 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oriana</title>
+    <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>hello world</h1>
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="#" class="logo">Oriana</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Seeds</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">learn</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Procedures</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">log in</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        </div>
+    </nav>
+
+    <div class="about-container">
+        <div class="content">
+            <p class="growth-title">All About Hair Growth</p>
+            <h1 class="growth-subtitle">Grow Strong, Grow Healthy®</h1>
+            <p class="growth-description">
+            Your hair grows best when it’s cared for properly. We provide guidance and tips to help you nurture your hair, promoting stronger, healthier growth every step of the way.
+            </p>
+        </div>
+    </div>
+
+
+
+
+
+
+    <script src="home.js"></script>
 </body>
 </html>
