--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="left-section">
       <div class="text-box">
         <h1>Oriana 
-          <span class="txt">HAIR EXPERTS</span> 
+          <span class="txt">HAIR EXPERTS®</span> 
         </h1>
         <p class="ori">Welcome to Oriana!</p>
         <p class="start-text">Get Started On Your</p>
