--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,18 @@
     <link rel="stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="nav-container">
@@ -43,10 +48,10 @@
                 </li>
             </ul>
             <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </nav>
 
@@ -55,7 +60,86 @@
             <p class="growth-title">All About Hair Growth</p>
             <h1 class="growth-subtitle">Grow Strong, Grow Healthy®</h1>
             <p class="growth-description">
-            Your hair grows best when it’s cared for properly. We provide guidance and tips to help you nurture your hair, promoting stronger, healthier growth every step of the way.
+                Nurture your hair naturally with organic seeds, gentle techniques, and mindful care.
+                We provide tips and guidance to help your hair grow stronger, healthier, and thrive from root to tip.
+            </p>
+        </div>
+    </div>
+
+    <main>
+        <div class="curl-pattern">
+            <h1>What's Your Curl Pattern?</h1>
+            <p>
+                All curls have natural arcs and angles that shape their beauty, yet they also allow moisture and
+                nutrients to escape. At Oriana, we help you understand your curl type and how to care for it—what your
+                hair needs, the herbs that support growth, and the techniques that keep it moisturized, defined, and
+                balanced. Our goal is to teach you how to nurture your curls naturally and effectively.
+            </p>
+        </div>
+        <section class="curl-grid">
+            <div class="curl-card">
+                <div class="curl-img">
+                    <img src="images/waves&loose.png" alt="Waves & Loose Curl">
+                </div>
+                <div class="curl-info">
+                    <h3>Waves & Loose Curls</h3>
+                    <p>
+                        A wavy or loose S-shaped curl pattern thrives with definoition and light hold.
+                        Weightless moisture is key to encouraging movement and volume without weighing down curls.
+                    </p>
+                </div>
+            </div>
+
+            <div class="curl-card">
+                <div class="curl-img">
+                    <img src="images/spiral.png" alt="Spiral Curl">
+                </div>
+                <div class="curl-info">
+                    <h3>Spiral</h3>
+                    <p>
+                        A uniform ringlet with an S-shaped pattern is indicative of this curl type. To help improve
+                        consistency, definition, and bounce, spiral curls require gentle care and lightweight moiisture
+                        balance.
+                    </p>
+                </div>
+            </div>
+
+            <div class="curl-card">
+                <div class="curl-img">
+                    <img src="images/tight.png" alt="Tight Curl">
+                </div>
+                <div class="curl-info">
+                    <h3>Tight</h3>
+                    <p>
+                        This corkscrew-like curl grows in a C-shape pattern. A healthy dose od replenishing moisture and
+                        essential nutrient is key to maintaining elasticity and definition.
+                    </p>
+                </div>
+            </div>
+
+            <div class="curl-card">
+                <div class="curl-img">
+                    <img src="images/coily.png" alt="Coily Curl">
+                </div>
+                <div class="curl-info">
+                    <h3>Coily</h3>
+                    <p>
+                        The tightest curl type is marked by a close-knit Z-shape. Rich hydration, restorative
+                        nourishment, and strengthening products with slip that condition, protect, and elongate are what
+                        this curl pattern craves.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <div class="herbs-container">
+        <div class="seed-content">
+            <h1>Herbal Seeds for Healthy Hair</h1>
+            <p>
+                Unlock the power of nature with our herbal seeds. Packed with nutrients and carefully selected for hair
+                wellness, they support growth, strength, and shine. Discover how these natural remedies can nourish your
+                hair from root to tip and elevate your daily care routine.
             </p>
         </div>
     </div>
@@ -67,4 +151,5 @@
 
     <script src="home.js"></script>
 </body>
+
 </html>
