--- a/h.html
+++ b/h.html
@@ -1,49 +1,7 @@
-<section class="curl-grid">
-            <div class="curl-preview">
-                <div class="picture-row">
-                    <img src="images/waves&loose.png" alt="Waves & Loose Curl">
-                </div>
-                <div class="curl-info">
-                    <h3>Waves & lose Curls</h3>
-                    <p>
-                        A wavy or loose S-shaped curl pattern thrives with definoition and light hold.
-                        Weightless moisture is key to encouraging movement and volume without weighing down curls.</p>
-                </div>
-            </div>
+Hair Care Basics
 
-            <div class="curl-preview">
-                <div class="picture-row">
-                    <img src="images/spiral.png" alt="Spiral Curl">
-                </div>
-                <div class="curl-info">
-                    <h3>Spiral</h3>
-                    <p>A uniform ringlet with an S-shaped pattern is indicative of this curl type. To help improve
-                        consistency, definition, and bounce, spiral curls require gentle care and lightweight moiisture
-                        balance.</p>
-                </div>
-            </div>
+Growth Tips
 
-            <div class="curl-preview">
-                <div class="picture-row">
-                    <img src="images/tight.png" alt="Tight Curl">
-                </div>
-                <div class="curl-info">
-                    <h3>Tight</h3>
-                    <p>This corkscrew-like curl grows in a C-shape pattern. A healthy dose od replenishing moisture and
-                        essential nutrient is key to maintaining elasticity and definition.</p>
-                </div>
-            </div>
+Product Usage
 
-            <div class="curl-preview">
-                <div class="picture-row">
-                    <img src="images/coily.png" alt="Coily Curl">
-                </div>
-                <div class="curl-info">
-                    <h3>Coily</h3>
-                    <p>The tightest curl type is marked by a close-knit Z-shape. Rich hydration, restorative
-                        nourishment, and strengthening products with slip that condition, protect, and elongate are what
-                        this curl pattern craves.</p>
-                </div>
-            </div>
-
-        </section>
+Protective Styles
