--- a/home.html
+++ b/home.html
@@ -134,13 +134,22 @@
     </main>
 
     <div class="herbs-container">
-        <div class="seed-content">
-            <h1>Herbal Seeds for Healthy Hair</h1>
-            <p>
-                Unlock the power of nature with our herbal seeds. Packed with nutrients and carefully selected for hair
-                wellness, they support growth, strength, and shine. Discover how these natural remedies can nourish your
-                hair from root to tip and elevate your daily care routine.
-            </p>
+        <div class="seeds">
+            <div class="seed-content">
+                <h1>Herbal Seeds for Healthy Hair</h1>
+                <div class="seed-text">
+                    <p>
+                        Unlock the power of nature with our herbal seeds. Packed with nutrients and carefully selected
+                        for hair
+                        wellness, they support growth, strength, and shine. Discover how these natural remedies can
+                        nourish your
+                        hair from root to tip and elevate your daily care routine.
+                    </p>
+                </div>
+                <div class="btn-cont">
+                    <a class="seed-btn">Learn More</a>
+                </div>
+            </div>
         </div>
     </div>
 
